--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,7 +15,7 @@
     "noEmit": true,
 
     /* Linting */
-    "strict": false,
+    "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
